fixed the issue with header covering event title

--- a/social-circles/frontend/src/css/EventPage.css
+++ b/social-circles/frontend/src/css/EventPage.css
@@ -21,6 +21,10 @@
     padding-top: 2em;
 }
 
+.spacing-from-header {
+    padding-top: 7.5em
+}
+
 hr {
     border: none;
     border-top: 3px solid rgba(0, 0, 0, 0.1);
